syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertSignalManifestationType";


message AlertSignalManifestation {
  enum AlertSignalManifestationEnum {
    AUD = 0;
    VIS = 1;
    TAN = 2;
    OTH = 3;
  }
  AlertSignalManifestationEnum type = 1;
}
