syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AlertSignalPrimaryLocationType";


message AlertSignalPrimaryLocation {
  enum AlertSignalPrimaryLocationEnum {
    LOC = 0;
    REM = 1;
  }
  AlertSignalPrimaryLocationEnum type = 1;
}
